# HivePoA

./: .cursorrules  .dockerignore  .env.example  .gitignore  .replit  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  package-lock.json  package.json  replit.md  start-hivepoa.bat  vite.config.ts  vitest.config.ts
attached_assets/: Pasted--Key-Points-A-simplified-Proof-of-Access-PoA-system-can-integrate-with-Hive-for-HBD-payments-1764638848407_1764638848408.txt  Pasted-The-source-list-for-the-Content-Security-Policy-directi_1767383793422.txt  Pasted-VM85-8-Coframe-Replit-Enterprise-watcher-loaded-The-sou_1770521437693.txt
client/: index.html
desktop-agent/: README.md  package-lock.json  package.json  tsconfig.cli.json  tsconfig.json
desktop-agent/src-tauri/: Cargo.toml  tauri.conf.json
desktop-agent/src-tauri/src/: api.rs  autostart.rs  kubo.rs  main.rs  notifications.rs
docs/: ARCHITECTURE.md  Build_Order_and_Reuse_Strategy.md  COMPUTE_API_CONTRACT.md  CONTRACT_FREEZE.json  Decentralized_HBD_Architecture.md  GPU_CONNECTION_UX.md  GPU_SHARING_PLAN.md  Go_To_Market_Plan.md  HIVE_AI_INTEGRATION.md  HIVE_AI_POOL_ENDPOINTS.md  HYBRID_ENCODING_BLUEPRINT.md  IMPLEMENTATION_PLAN.md  LOCAL_IPFS_SETUP.md  Multisig_Treasury_Blueprint.md  Multisig_Treasury_Research.md  PHASE0_DESIGN_DECISIONS.md  POGC_BLUEPRINT.md  README.md  SEPARATION_OF_CONCERNS.md  TREASURY.md  TRUSTED_ROLE_REGISTRY_SPEC.md  UNIVERSAL_GPU_ONBOARDING.md  VALIDATOR_GUIDE.md  Validator_Ranking_and_Filters.md  Validator_System_Deep_Dive.md
schemas/: README.md  artifact_ref.json  (+9 more)
(+251 files in other folders)
