[package]
name = "spk-desktop"
version = "0.1.0"
description = "SPK Network Desktop Agent - 24/7 IPFS node for earning HBD rewards"
authors = ["SPK Network"]
license = "MIT"
repository = "https://github.com/spknetwork/spk-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
lazy_static = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "spk-desktop"
path = "src/main.rs"
